--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "files.associations": {
+        "*.dbclient-js": "javascript",
         "*.ejs": "html",
+        "*.html": "html",
         "functional": "cpp",
         "iostream": "cpp",
         "ostream": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "new": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled",
 }
